--- a/my-app/src/assets/sass/component/loading.scss
+++ b/my-app/src/assets/sass/component/loading.scss
@@ -6,7 +6,9 @@
     margin: 0; 
     // font-family: 'Quicksand', sans-serif;
 }
-body{
+.body{
+    width: 100%;
+    height: 100vh;
     background:#393E46;
 }
 ul{
