--- a/my-app/src/assets/sass/main.scss
+++ b/my-app/src/assets/sass/main.scss
@@ -1,3 +1,5 @@
-@import './base' ;
 @import './abstract/variable'; 
+@import './base';
+@import './component/modal'; 
+
 // @import './component/loading' ;
