implement base64 images feature

--- a/my-app/src/assets/sass/main.scss
+++ b/my-app/src/assets/sass/main.scss
@@ -1,5 +1,5 @@
 @import './abstract/variable'; 
 @import './base';
-@import './component/modal'; 
+// @import './component/modal'; 
 
 // @import './component/loading' ;
